{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 22,
  "lineage": "25e5f003-178d-f6a1-2221-689cae287930",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d0d32cc5dbd3a11",
            "association_id": "eipassoc-025e833e81930795e",
            "domain": "vpc",
            "id": "eipalloc-07d0d32cc5dbd3a11",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0fddb8cae95ade510",
            "private_dns": "ip-192-168-3-26.us-west-1.compute.internal",
            "private_ip": "192.168.3.26",
            "public_dns": "ec2-184-169-176-179.us-west-1.compute.amazonaws.com",
            "public_ip": "184.169.176.179",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:176723687943:internet-gateway/igw-0f29b9ddf496e0b05",
            "id": "igw-0f29b9ddf496e0b05",
            "owner_id": "176723687943",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0197190c3b5d2f7f1"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d0d32cc5dbd3a11",
            "connectivity_type": "public",
            "id": "nat-083c361ce729011f2",
            "network_interface_id": "eni-0fddb8cae95ade510",
            "private_ip": "192.168.3.26",
            "public_ip": "184.169.176.179",
            "subnet_id": "subnet-0a9bd94d1c3cca834",
            "tags": {
              "Name": "NGW"
            },
            "tags_all": {
              "Name": "NGW"
            }
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_subnet.pri",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:176723687943:route-table/rtb-02bbbc0250e4ca38c",
            "id": "rtb-02bbbc0250e4ca38c",
            "owner_id": "176723687943",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f29b9ddf496e0b05",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "custom"
            },
            "tags_all": {
              "Name": "custom"
            },
            "timeouts": null,
            "vpc_id": "vpc-0197190c3b5d2f7f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:176723687943:route-table/rtb-0efa0e207117da988",
            "id": "rtb-0efa0e207117da988",
            "owner_id": "176723687943",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-083c361ce729011f2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo"
            },
            "tags_all": {
              "Name": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0197190c3b5d2f7f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.ngw",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0740018cbef004722",
            "route_table_id": "rtb-02bbbc0250e4ca38c",
            "subnet_id": "subnet-08b9bcf806e1de691"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt1",
            "aws_subnet.pub",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030a461a9d5d8b66c",
            "route_table_id": "rtb-0efa0e207117da988",
            "subnet_id": "subnet-0a9bd94d1c3cca834"
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_nat_gateway.ngw",
            "aws_route_table.rt2",
            "aws_subnet.pri",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:176723687943:security-group/sg-095067e2061bba82f",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095067e2061bba82f",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sgtest",
            "name_prefix": "",
            "owner_id": "176723687943",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-sg"
            },
            "tags_all": {
              "Name": "allow-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0197190c3b5d2f7f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:176723687943:subnet/subnet-0a9bd94d1c3cca834",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9bd94d1c3cca834",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176723687943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-0197190c3b5d2f7f1"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:176723687943:subnet/subnet-08b9bcf806e1de691",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b9bcf806e1de691",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176723687943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-0197190c3b5d2f7f1"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:176723687943:vpc/vpc-0197190c3b5d2f7f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0260d0e9a12c51603",
            "default_route_table_id": "rtb-0653687a9954f45d0",
            "default_security_group_id": "sg-0a07b30ef3f104f76",
            "dhcp_options_id": "dopt-012242d15c89ddf45",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0197190c3b5d2f7f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0653687a9954f45d0",
            "owner_id": "176723687943",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          }
        }
      ]
    }
  ]
}